@@ -463,6 +463,7 @@ string ResourceManager::strings[] = {
 "Open private messages from offline users in their own window", 
 "Open private messages in their own window", 
 "Ports", 
+"Popup box to input password for hubs", 
 "Public Hubs list", 
 "HTTP Proxy (for hublist only)", 
 "Public Hubs list URL", 
@@ -1067,6 +1068,7 @@ string ResourceManager::names[] = {
 "SettingsPopupOffline", 
 "SettingsPopupPms", 
 "SettingsPorts", 
+"SettingsPromptPassword", 
 "SettingsPublicHubList", 
 "SettingsPublicHubListHttpProxy", 
 "SettingsPublicHubListUrl", 
